TestCases/Errors/Haversine/observations/sst/win_05_obs.spm
obs r15-c5 0.000106428267347808
obs r15-c6 0.00111841210272899
obs r16-c6 0.000861286312972315
obs r14-c7 0.00326713217274766
obs r15-c7 0.00260258517797756
obs r16-c7 0.0020103054267618
obs r13-c8 0.000417014178482068
obs r14-c8 0.00310813102207544
obs r15-c8 0.00259646285461226
obs r16-c8 0.00286430361618332
obs r13-c9 0.000417014178482068
obs r14-c9 0.00201803517316815
obs r15-c9 0.00325600325600326
obs r7-c16 0.005
obs r9-c17 0.0281802274715661
obs r7-c18 0.000625
obs r8-c18 0.0283013096505168
obs r9-c18 0.0220872740160043
obs r11-c18 1e-08
obs r12-c18 1e-08
obs r8-c19 0.016283467212788
obs r9-c19 0.0248125701304606
obs r11-c19 1e-08
obs r12-c19 1e-08
obs r8-c20 0.00825508720874352
obs r9-c20 0.00537277780910278
obs r10-c20 0.00388116358420731
obs r8-c21 0.00333333333333333
error_value r15-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r13-c8 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r16-c8 0.2
error_value r13-c9 0.2
error_value r14-c9 0.2
error_value r15-c9 0.2
error_value r7-c16 0.2
error_value r9-c17 0.2
error_value r7-c18 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r11-c18 0.2
error_value r12-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r8-c21 0.2
